# zero2prod

./: Cargo.toml  Readme.md
migrations/: 20220605211731_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: form_data.rs  health_chech.rs
