[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jorge Clavijo <jym272@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }